Answer.s section alignment fixed

--- a/client/src/components/Answer/Answer.css
+++ b/client/src/components/Answer/Answer.css
@@ -1,4 +1,6 @@
 .answer-container {
+  display:flex;
+  justify-content: center;
   color: #ffffff;
   padding: 30px;
   margin: 50px auto;
